syntax = "proto3";

import "google/protobuf/timestamp.proto";

package bff.moderation.v1;

option go_package = "github.com/strideynet/bsky-furry-feed/proto/bff/moderation/v1;moderationv1pb";

service ModerationService {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc GetApprovalQueue(GetApprovalQueueRequest) returns (GetApprovalQueueResponse) {}
  rpc ProcessApprovalQueue(ProcessApprovalQueueRequest) returns (ProcessApprovalQueueResponse) {}
}

message PingRequest {}

message PingResponse {}

message CandidateActor {
  string did = 1;
  bool is_hidden = 2;
  bool is_artist = 3;
  string comment = 4;
}

message GetApprovalQueueRequest {}

message GetApprovalQueueResponse {
  // queue_entry is the candidate actor that needs to be processed by a mod.
  // process the queue entry using the ProcessApprovalQueueEntry RPC.
  CandidateActor queue_entry = 1;
  // queue_entries_remaining indicates how many queue entries are left including
  // the one returned in this response.
  int32 queue_entries_remaining = 2;
}

enum ApprovalQueueAction {
  APPROVAL_QUEUE_ACTION_UNSPECIFIED = 0;
  APPROVAL_QUEUE_ACTION_APPROVE = 1;
  APPROVAL_QUEUE_ACTION_REJECT = 2;
}

message ProcessApprovalQueueRequest {
  string did = 1;
  ApprovalQueueAction action = 2;
  bool is_artist = 3;
}

message ProcessApprovalQueueResponse {}